Add artifact links

--- a/notifier/templates/detail.erb
+++ b/notifier/templates/detail.erb
@@ -1,4 +1,4 @@
-### Migration: <%= migration['migration'] %>
+#### Migration: <%= migration['migration'] %>
 
 * Duration: <%= walltime(migration) %>
 * Database size change: <%= total_size_change(migration) %>
