--- a/notifier/templates/feedback.erb
+++ b/notifier/templates/feedback.erb
@@ -8,5 +8,9 @@ Migrations included in this change have been executed on gitlab.com data for tes
 <%= render_details(migration) %>
 % end
 
+#### Artifacts
+
+* [Database testing statistics](<%= ENV['CI_PROJECT_URL'] %>/-/jobs/<%= ENV['CI_JOB_ID'] %>/artifacts/raw/migration-stats.json)
+
 ---
 Brought to you by [gitlab-org/database-team/gitlab-com-database-testing](https://gitlab.com/gitlab-org/database-team/gitlab-com-database-testing).
