--- a/notifier/templates/feedback.erb
+++ b/notifier/templates/feedback.erb
@@ -13,4 +13,4 @@ Migrations included in this change have been executed on gitlab.com data for tes
 * [Database testing statistics](<%= ENV['CI_PROJECT_URL'] %>/-/jobs/<%= ENV['CI_JOB_ID'] %>/artifacts/raw/migration-stats.json)
 
 ---
-Brought to you by [gitlab-org/database-team/gitlab-com-database-testing](https://gitlab.com/gitlab-org/database-team/gitlab-com-database-testing).
+Brought to you by [gitlab-org/database-team/gitlab-com-database-testing](https://gitlab.com/gitlab-org/database-team/gitlab-com-database-testing). Contributions welcome! [Epic](https://gitlab.com/groups/gitlab-org/database-team/-/epics/6)
