--- a/notifier/templates/feedback.erb
+++ b/notifier/templates/feedback.erb
@@ -2,7 +2,7 @@
 
 Migrations included in this change have been executed on gitlab.com data for testing purposes. For details, please see the [migration testing pipeline](<%= ENV['CI_PROJECT_URL'] %>/-/pipelines/<%= ENV['CI_PIPELINE_ID'] %>) (limited access).
 
-<%= partial('summary_table') %>
+<%= render_summary_table %>
 
 % stats.each do |migration|
 <%= render_details(migration) %>
