--- a/notifier/templates/pgss_table.erb
+++ b/notifier/templates/pgss_table.erb
@@ -1,5 +1,8 @@
+% pgss_rows = pgss.reject { |row| filter_pgss_query?(row['query']) }
+% unless pgss_rows.empty?
 | Query | Calls | Total Time | Max Time | Mean Time | Rows |
 | ----- | ----- | ---------- | -------- | --------- | ---- |
-% pgss.reject { |row| filter_pgss_query?(row['query']) }.each do |row|
+% pgss_rows.each do |row|
 | <pre><%= format_query(row['query']) %></pre> | <%= format_int(row['calls']) %> | <%= format_time(row['total_time']) %> | <%= format_time(row['max_time']) %> | <%= format_time(row['mean_time']) %> | <%= format_int(row['rows']) %> |
+% end
 % end
