Add note about pending migrations

--- a/notifier/templates/feedback.erb
+++ b/notifier/templates/feedback.erb
@@ -1,6 +1,6 @@
 ### Database migrations
 
-Migrations included in this change have been executed on gitlab.com data for testing purposes. For details, please see the [migration testing pipeline](<%= ENV['CI_PROJECT_URL'] %>/-/pipelines/<%= ENV['CI_PIPELINE_ID'] %>) (limited access).
+Migrations included in this change have been executed on gitlab.com data for testing purposes. For details, please see the [migration testing pipeline](<%= ENV['CI_PROJECT_URL'] %>/-/pipelines/<%= ENV['CI_PIPELINE_ID'] %>) (limited access). Note that this includes pending migrations from `master`.
 
 <%= render_summary_table %>
 
