--- a/notifier/templates/feedback.erb
+++ b/notifier/templates/feedback.erb
@@ -11,6 +11,7 @@ Migrations included in this change have been executed on gitlab.com data for tes
 #### Artifacts
 
 * [Database testing statistics](<%= ENV['CI_PROJECT_URL'] %>/-/jobs/<%= ENV['CI_JOB_ID'] %>/artifacts/raw/migration-stats.json)
+* [Database Lab Instance](https://console.postgres.ai/gitlab/gitlab-production-tunnel/instances/32/clones/database-testing-<%= ENV['CI_PIPELINE_ID'] %>)
 
 ---
 Brought to you by [gitlab-org/database-team/gitlab-com-database-testing](https://gitlab.com/gitlab-org/database-team/gitlab-com-database-testing). Contributions welcome! [Epic](https://gitlab.com/groups/gitlab-org/database-team/-/epics/6)
