Extract migration details
This can be used to only report on migrations included in the feature
branch.

Relates to
https://gitlab.com/gitlab-org/database-team/team-tasks/-/issues/157

--- a/notifier/templates/detail.erb
+++ b/notifier/templates/detail.erb
@@ -1,8 +1,8 @@
-#### Migration: <%= migration['migration'] %>
+#### Migration: <%= migration.version %>
 
 * Duration: <%= walltime(migration) %>
 * Database size change: <%= total_size_change(migration) %>
 
-% if migration['query_statistics']
-<%= render_pgss_table(migration['query_statistics']) %>
+% if migration.statistics.query_statistics
+<%= render_pgss_table(migration.statistics.query_statistics) %>
 % end
