Add clone details to notification
- Clean up the dblab-ssh docker file to remove some of the
  package lists
- Adds a webserver that serves the thin clone information:
	- Created at
	- data age timestamp
	- clone id
- Adds details to the notification
	- Clone id
	- Created at
	- Data age timestamp
	- expected removal time

Relates to https://gitlab.com/gitlab-org/database-team/team-tasks/-/issues/150

--- a/notifier/templates/feedback.erb
+++ b/notifier/templates/feedback.erb
@@ -8,10 +8,10 @@ Migrations included in this change have been executed on gitlab.com data for tes
 <%= render_details(migration) %>
 % end
 
-#### Artifacts
+#### Clone Details
+<%= render_clone_details(result.clone_details) %>
 
-* [Pipeline artifacts](<%= ENV['CI_PROJECT_URL'] %>/-/jobs/<%= ENV['CI_JOB_ID'] %>/artifacts/browse/migration-testing/)
-* [Database Lab Instance](https://console.postgres.ai/gitlab/gitlab-production-tunnel/instances/32/clones/database-testing-<%= ENV['CI_PIPELINE_ID'] %>)
+#### [Artifacts](<%= ENV['CI_PROJECT_URL'] %>/-/jobs/<%= ENV['CI_JOB_ID'] %>/artifacts/browse/migration-testing/)
 
 ---
 Brought to you by [gitlab-org/database-team/gitlab-com-database-testing](https://gitlab.com/gitlab-org/database-team/gitlab-com-database-testing). Contributions welcome! [Epic](https://gitlab.com/groups/gitlab-org/database-team/-/epics/6)
