Move artifacts into a directory
In preparation for artifacting query logs

--- a/notifier/templates/feedback.erb
+++ b/notifier/templates/feedback.erb
@@ -10,7 +10,7 @@ Migrations included in this change have been executed on gitlab.com data for tes
 
 #### Artifacts
 
-* [Database testing statistics](<%= ENV['CI_PROJECT_URL'] %>/-/jobs/<%= ENV['CI_JOB_ID'] %>/artifacts/raw/migration-stats.json)
+* [Pipeline artifacts](<%= ENV['CI_PROJECT_URL'] %>/-/jobs/<%= ENV['CI_JOB_ID'] %>/artifacts/browse/migration-testing/)
 * [Database Lab Instance](https://console.postgres.ai/gitlab/gitlab-production-tunnel/instances/32/clones/database-testing-<%= ENV['CI_PIPELINE_ID'] %>)
 
 ---
