Include JSON data in the feedback comment
Relates to
https://gitlab.com/gitlab-org/database-team/gitlab-com-database-testing/-/issues/7

--- a/notifier/templates/feedback.erb
+++ b/notifier/templates/feedback.erb
@@ -23,4 +23,6 @@ Migrations included in this change have been executed on gitlab.com data for tes
 #### [Artifacts](<%= ENV['CI_PROJECT_URL'] %>/-/jobs/<%= ENV['CI_JOB_ID'] %>/artifacts/browse/migration-testing/)
 
 ---
-Brought to you by [gitlab-org/database-team/gitlab-com-database-testing](https://gitlab.com/gitlab-org/database-team/gitlab-com-database-testing). Contributions welcome! [Roadmap](https://gitlab.com/groups/gitlab-org/database-team/-/epics/9)
+Brought to you by [gitlab-org/database-team/gitlab-com-database-testing](https://gitlab.com/gitlab-org/database-team/gitlab-com-database-testing). [Epic](https://gitlab.com/groups/gitlab-org/database-team/-/epics/9)
+
+<!-- JSON: <%= render_json_data %> -->
