--- a/notifier/templates/feedback.erb
+++ b/notifier/templates/feedback.erb
@@ -1,9 +1,10 @@
 <!-- <%= IDENTIFIABLE_NOTE_TAG %> -->
 ### Database migrations
 
-Migrations included in this change have been executed on gitlab.com data for testing purposes. For details, please see the [migration testing pipeline](<%= ENV['CI_PROJECT_URL'] %>/-/pipelines/<%= ENV['CI_PIPELINE_ID'] %>) (limited access). Note that this includes pending migrations from `master`.
+Migrations included in this change have been executed on gitlab.com data for testing purposes. For details, please see the [migration testing pipeline](<%= ENV['CI_PROJECT_URL'] %>/-/pipelines/<%= ENV['CI_PIPELINE_ID'] %>) (limited access).
 
 <%= render_summary_table %>
+
 % migrations_from_branch.each do |migration|
 <%= render_details(migration) %>
 % end
