Show Migration type and Name
- Add migration type to table
- Add migration name and type to details
- Add test patch with post-migration
- Move exception patch so that it goes to the end

Related to https://gitlab.com/gitlab-org/database-team/gitlab-com-database-testing/-/issues/10

--- a/notifier/templates/detail.erb
+++ b/notifier/templates/detail.erb
@@ -1,5 +1,6 @@
-#### Migration: <%= migration.version %>
+#### Migration: <%= migration.version %> - <%= migration.name %>
 
+* Type: <%= type(migration) %>
 * Duration: <%= walltime(migration) %>
 * Database size change: <%= total_size_change(migration) %>
 
