Migrate openstrutct to dedicated classes
- Dedicated classes let us isolate query or migration
  specific logic to those classes
- Simplify tempates by accessing those data models directly
- Remove recursive ostruct creation from result
- Fix bug so we correctly filter out lines we intend to
  ignore

Relates to https://gitlab.com/gitlab-org/database-team/gitlab-com-database-testing/issues/6

--- a/notifier/templates/detail.erb
+++ b/notifier/templates/detail.erb
@@ -4,6 +4,6 @@
 * Duration: <%= walltime(migration) %>
 * Database size change: <%= total_size_change(migration) %>
 
-% if migration.statistics.query_statistics
-<%= render_pgss_table(migration.statistics.query_statistics) %>
+% if migration.queries.any?
+<%= render_pgss_table(migration.queries) %>
 % end
