Add warnings to notice
- Displays a warning at the top of the notice
- Adds a testing migration patch that has a query that takes 5 seconds
- Add render test for warning

Relates to https://gitlab.com/gitlab-org/database-team/gitlab-com-database-testing/issues/6

--- a/notifier/templates/detail.erb
+++ b/notifier/templates/detail.erb
@@ -1,4 +1,4 @@
-#### Migration: <%= migration.version %> - <%= migration.name %>
+#### <%= warning(migration) %> Migration: <%= migration.name_formatted %>
 
 * Type: <%= type(migration) %>
 * Duration: <%= walltime(migration) %>
