Add warning for migrations to contact SRE
- Migrations over 20 minutes suggest contacting SRE
- Use the activesupport time integer patch to make the times
  more readable

Relates to https://gitlab.com/gitlab-org/database-team/gitlab-com-database-testing/issues/6

--- a/notifier/templates/warnings.erb
+++ b/notifier/templates/warnings.erb
@@ -1,5 +1,5 @@
 |           | <%= count %> Warnings |
 | --------- | -------------------- |
-% all.each do |warning|
+% with_line_breaks.each do |warning|
 | :warning: | <%= warning %> |
 % end
