--- a/notifier/templates/feedback.erb
+++ b/notifier/templates/feedback.erb
@@ -24,5 +24,4 @@ Migrations included in this change have been executed on gitlab.com data for tes
 
 ---
 Brought to you by [gitlab-org/database-team/gitlab-com-database-testing](https://gitlab.com/gitlab-org/database-team/gitlab-com-database-testing). [Epic](https://gitlab.com/groups/gitlab-org/database-team/-/epics/9)
-
-<!-- JSON: <%= render_json_data %> -->
+<%= render_json_payload %>
