--- a/notifier/templates/feedback.erb
+++ b/notifier/templates/feedback.erb
@@ -7,6 +7,8 @@ Migrations included in this change have been executed on gitlab.com data for tes
 
 <%= render_migrations_from_branch_summary %>
 
+<%= render_all_migrations_histogram %>
+
 % migrations_from_branch.each do |migration|
 <%= render_details(migration) %>
 % end
