Display results of background migration testing

--- a/notifier/templates/charts/histogram.erb
+++ b/notifier/templates/charts/histogram.erb
@@ -1,7 +1,7 @@
 <details>
 <summary><%= title %></summary>
 
-| Query Runtime | Count |
+| <%= column_label %> | Count |
 |---------------|-------|
 <% data.each do |bucket, executions| -%>
 |<%= bucket_label(bucket) %> | <%= executions.count %> |
