--- a/notifier/templates/feedback.erb
+++ b/notifier/templates/feedback.erb
@@ -1,5 +1,5 @@
 <!-- <%= IDENTIFIABLE_NOTE_TAG %> -->
-### Database migrations
+### Database migrations (on the <%= result.database %> database)
 
 <%= warnings.render %>
 
