--- a/notifier/templates/new_table.erb
+++ b/notifier/templates/new_table.erb
@@ -1,18 +1,18 @@
-<% columns = NewTable(query) %>
+<% new_table = NewTable.new(query) %>
 
-<% if columns.optimized? %>
+<% if new_table.is_column_order_optimized? %>
   PERFECT!
 <% else %>
+  Please use the following column order:
+
   | Column name | Data Type |
   | -------- | ---------------- |
-  <% columns.each do |column| %>
+  <% new_table.optimize_column_order.each do |column| %>
   | <%= column[0] %> | <%= column[1] %> |
   <% end %>
 <% end %>
 
-
-
-
-
+For more details check:
+https://docs.gitlab.com/ee/development/database/ordering_table_columns.html#ordering-table-columns-in-postgresql
 
 
