Displaying column ordering suggestion (in migration details)

--- a/notifier/templates/detail.erb
+++ b/notifier/templates/detail.erb
@@ -8,4 +8,8 @@
 <%= render_pgss_table(migration.queries) %>
 % end
 
+<% if migration.queries.any?(&:create_table?) %>
+  <%= render_migration_column_ordering_suggestion(migration.queries) %>
+<% end %>
+
 <%= render_migration_histogram(migration) %>
