--- a/notifier/templates/column_ordering_suggestions.erb
+++ b/notifier/templates/column_ordering_suggestions.erb
@@ -3,8 +3,8 @@
 Ordering columns efficiently will help us save (more) space, further details can be found <%= link_to "here", reference_url %>.
 
 % queries.each do |query|
-% new_table = NewTable.new(query)
-% unless new_table.is_column_order_optimized?
+% new_table = NewTable.new(query.new_table_fields_and_types)
+% unless new_table.column_order_optimized?
 
 Query: <%= query.formatted_query %>
 
